
3.0  2012-06-25
  - Code name "Rainbow", this is a major release.
  - Removed Mojolicious::Plugin::I18N so it can be maintained as a separate
    distribution.
  - Removed app_class attribute from Mojo::Server.
  - Removed qp_decode and qp_encode methods from Mojo::ByteStream.
  - Removed qp_decode and qp_encode functions from Mojo::Util.
  - Renamed Mojo::CookieJar to Mojo::UserAgent::CookieJar.
  - Renamed Mojo::Command to Mojolicious::Command.
  - Merged get_all_data and get_data methods from Mojo::Command into data
    method in Mojo::Loader.
  - Moved class_to_file and class_to_path methods from Mojo::Command to
    Mojo::Util.
  - Updated IO::Socket::SSL requirement to 1.75 for IO::Socket::IP support.
  - Switched back from IO::Socket::INET6 to IO::Socket::IP for IPv6 support.
  - Switched from HMAC-MD5 to HMAC-SHA1 for signed cookies.
  - Added j and r functions to ojo. (sharifulin, sri)
  - Added accept_interval attribute to Mojo::IOLoop.
  - Added support for new HTTP status code.
  - Modernized ".perltidyrc".
  - Improved Mojo::IOLoop::Server to prioritize RC4 cipher, which mitigates
    the BEAST attack. (Danny Thomas)
  - Improved not found page to highlight custom route names.
  - Improved to method in Mojolicious::Routes::Route to give easier access to
    default parameters.
  - Improved message parser performance slightly.
  - Improved documentation. (ichesnokov, sri)
  - Improved tests.
  - Fixed bug that prevented sessions from working in embedded applications.
  - Fixed JSON Pointer escaping.
  - Fixed small JSON Pointer bug in get command. (avkhozov)
  - Fixed small application initialization bug in Mojo::Server.

2.98  2012-05-30
  - Switched from IO::Socket::IP to IO::Socket::INET6 for IPv6 support.
  - Improved IPv6 exception handling in Mojo::IOLoop::Client.
  - Improved documentation.
  - Improved tests.
  - Fixed array appending bug in Mojo::Parameters.

2.97  2012-05-28