@@ -6,6 +6,8 @@
   - Removed app_class attribute from Mojo::Server.
   - Removed qp_decode and qp_encode methods from Mojo::ByteStream.
   - Removed qp_decode and qp_encode functions from Mojo::Util.
+  - Removed render_to_file and render_file_to_file methods from
+    Mojo::Template.
   - Renamed Mojo::CookieJar to Mojo::UserAgent::CookieJar.
   - Renamed Mojo::Command to Mojolicious::Command.
   - Merged get_all_data and get_data methods from Mojo::Command into data
